@@ -1,5 +1,11 @@
 2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* Makefile.in (libdfp_c_tests): Add quantum new tests.
+	* tests/quantum.input: New file: quantum new tests input.
+	* tests/test-quantum.c: Remove.
+
+2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* Makefile.in (libdfp_c_tests): Add ilogb new tests.
 	* tests/ilogb.input: New file: ilogb new tests input.
 	* tests/llogb.input: New file: llogb new tests input.
